# agent-interviewer

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/agent_interviewer/: __init__.py  cli.py  config.py  feedback.py  models.py  pack_loader.py  personas.py  progress.py  server.py  session.py  storage.py  web.py
tests/: test_feedback_variants.py  test_models.py  test_pack_loader.py  test_personas.py  test_progress.py  test_storage.py  test_web.py
